--- a/package.json
+++ b/package.json
@@ -37,24 +37,26 @@
   "dependencies": {
     "@babel/runtime": "^7.7.7",
     "@tarojs/components": "3.4.1",
-    "@tarojs/runtime": "3.4.1",
-    "@tarojs/taro": "3.4.1",
     "@tarojs/plugin-framework-react": "3.4.1",
     "@tarojs/react": "3.4.1",
+    "@tarojs/runtime": "3.4.1",
+    "@tarojs/taro": "3.4.1",
+    "antd": "^4.18.5",
+    "react": "^17.0.0",
     "react-dom": "^17.0.0",
-    "react": "^17.0.0"
+    "taro-ui": "^2.3.4"
   },
   "devDependencies": {
-    "@types/webpack-env": "^1.13.6",
-    "@types/react": "^17.0.2",
-    "@tarojs/mini-runner": "3.4.1",
     "@babel/core": "^7.8.0",
+    "@tarojs/mini-runner": "3.4.1",
     "@tarojs/webpack-runner": "3.4.1",
+    "@types/react": "^17.0.2",
+    "@types/webpack-env": "^1.13.6",
     "babel-preset-taro": "3.4.1",
-    "eslint-config-taro": "3.4.1",
     "eslint": "^6.8.0",
-    "eslint-plugin-react": "^7.8.2",
+    "eslint-config-taro": "3.4.1",
     "eslint-plugin-import": "^2.12.0",
+    "eslint-plugin-react": "^7.8.2",
     "eslint-plugin-react-hooks": "^4.2.0",
     "stylelint": "9.3.0"
   }
